<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@color/step_up_background_color"
    android:gravity="top"
    tools:context=".ExpenseDetailsActivity">

    <!-- Title Field -->
    <EditText
        android:id="@+id/title_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/title"
        android:textSize="30sp"
        android:inputType="text"
        android:maxLines="1"

        android:textColor="@color/light_text_color"
        android:textColorHint="@color/accent_color"
        android:background="@color/background_color">

    </EditText>

    <!-- Description Field -->
    <EditText
        android:id="@+id/desc_entry"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_below="@id/title_entry"
        android:hint="@string/description"
        android:textSize="20sp"
        android:inputType="textMultiLine"

        android:textColor="@color/light_text_color"
        android:textColorHint="@color/accent_color"
        android:background="@color/background_color"
        tools:ignore="Autofill">

    </EditText>
    <!-- Cost Field -->
    <LinearLayout
        android:id="@+id/price_entry_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_entry"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/dollar_sign"
            android:layout_marginEnd="5dp"
            android:textColor="@color/light_text_color"
            android:textColorHint="@color/highlight_color"
            android:background="@color/step_up_background_color">

        </TextView>

        <EditText
            android:id="@+id/price_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            android:hint="@string/numerical_placeholder"
            android:textSize="40sp"
            android:inputType="numberDecimal"
            android:maxLines="1"

            android:textColor="@color/light_text_color"
            android:textColorHint="@color/accent_color"
            android:background="@color/background_color"
            tools:ignore="Autofill">

        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/price_entry_line"
        android:text="@string/done"

        android:textSize="20sp"
        android:textColor="@color/dark_text_color"
        android:backgroundTint="@color/accent_color">
    </Button>
</RelativeLayout>